[package]
name = "gimme-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = "0.30.0"
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0"
actix-web = "4"
serde_json = "1"
simple-error = "0.2"